crates/rehearse/tests/ui/operation/fail/invalid_impact.stderr
error: unsupported impact; expected one of pure, session, read, write, delete, opaque
 --> tests/ui/operation/fail/invalid_impact.rs:6:22
  |
6 | #[operation(impact = maybe)]
  |                      ^^^^^
